// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AGG with d-h2o and base loss 1`] = `
Array [
  Object {
    "atoms": Object {
      "C": 10,
      "H": 13,
      "N": 5,
      "O": 8,
      "P": 2,
    },
    "charge": 0,
    "comment": "d-H2O1",
    "em": 393.02393639454,
    "ionization": Object {
      "charge": -1,
      "em": -1.00782503223,
      "mf": "(H+)-1",
    },
    "mf": "C10H13N5O8P2",
    "ms": Object {
      "charge": -1,
      "em": 392.01665994221906,
      "ionization": "(H+)-1",
    },
    "mw": 393.1868682186928,
    "parts": Array [
      "HODampPO2",
    ],
    "unsaturation": 8,
  },
  Object {
    "atoms": Object {
      "C": 20,
      "H": 25,
      "N": 10,
      "O": 14,
      "P": 3,
    },
    "charge": 0,
    "comment": "d-H2O2",
    "em": 722.07645651929,
    "ionization": Object {
      "charge": -1,
      "em": -1.00782503223,
      "mf": "(H+)-1",
    },
    "mf": "C20H25N10O14P3",
    "ms": Object {
      "charge": -1,
      "em": 721.069180066969,
      "ionization": "(H+)-1",
    },
    "mw": 722.3932238362731,
    "parts": Array [
      "HODampDgmpPO2",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 25,
      "H": 33,
      "N": 10,
      "O": 17,
      "P": 3,
    },
    "charge": 0,
    "comment": "-B2",
    "em": 838.1238006358399,
    "ionization": Object {
      "charge": -1,
      "em": -1.00782503223,
      "mf": "(H+)-1",
    },
    "mf": "C25H33N10O17P3",
    "ms": Object {
      "charge": -1,
      "em": 837.1165241835189,
      "ionization": "(H+)-1",
    },
    "mw": 838.5086441253504,
    "parts": Array [
      "HODampDrmpDgmpH",
    ],
    "unsaturation": 16,
  },
  Object {
    "atoms": Object {
      "C": 25,
      "H": 33,
      "N": 10,
      "O": 17,
      "P": 3,
    },
    "charge": 0,
    "comment": "-B3",
    "em": 838.1238006358399,
    "ionization": Object {
      "charge": -1,
      "em": -1.00782503223,
      "mf": "(H+)-1",
    },
    "mf": "C25H33N10O17P3",
    "ms": Object {
      "charge": -1,
      "em": 837.1165241835189,
      "ionization": "(H+)-1",
    },
    "mw": 838.5086441253504,
    "parts": Array [
      "HODampDgmpDrmpH",
    ],
    "unsaturation": 16,
  },
  Object {
    "atoms": Object {
      "C": 25,
      "H": 33,
      "N": 10,
      "O": 18,
      "P": 3,
    },
    "charge": 0,
    "comment": "-B1",
    "em": 854.1187152554099,
    "ionization": Object {
      "charge": -1,
      "em": -1.00782503223,
      "mf": "(H+)-1",
    },
    "mf": "C25H33N10O18P3",
    "ms": Object {
      "charge": -1,
      "em": 853.111438803089,
      "ionization": "(H+)-1",
    },
    "mw": 854.5080490496687,
    "parts": Array [
      "HODrmpDgmpDgmpH",
    ],
    "unsaturation": 16,
  },
  Object {
    "atoms": Object {
      "C": 30,
      "H": 38,
      "N": 15,
      "O": 18,
      "P": 3,
    },
    "charge": 0,
    "em": 989.1732104387099,
    "ionization": Object {
      "charge": -1,
      "em": -1.00782503223,
      "mf": "(H+)-1",
    },
    "mf": "C30H38N15O18P3",
    "ms": Object {
      "charge": -1,
      "em": 988.165933986389,
      "ionization": "(H+)-1",
    },
    "mw": 989.6349483608528,
    "parts": Array [
      "HODampDgmpDgmpH",
    ],
    "unsaturation": 21,
  },
]
`;

exports[`AGGCAG fragment 1`] = `
Array [
  Object {
    "atoms": Object {
      "C": 10,
      "H": 13,
      "N": 5,
      "O": 4,
      "P": 0,
    },
    "charge": 0,
    "comment": "y1",
    "em": 267.09675391942,
    "ionization": Object {
      "charge": 0,
      "em": 1.00782503223,
      "mf": "(H+)-",
    },
    "mf": "C10H13N5O4",
    "ms": Object {
      "charge": 0,
      "em": 0,
      "ionization": "(H+)-",
    },
    "mw": 267.2417245245797,
    "parts": Array [
      "O-2P-1DgmpH",
    ],
    "unsaturation": 7,
  },
  Object {
    "atoms": Object {
      "C": 20,
      "H": 25,
      "N": 10,
      "O": 9,
      "P": 1,
    },
    "charge": 0,
    "comment": "y2",
    "em": 580.1543594246,
    "ionization": Object {
      "charge": 0,
      "em": 1.00782503223,
      "mf": "(H+)-",
    },
    "mf": "C20H25N10O9P",
    "ms": Object {
      "charge": 0,
      "em": 0,
      "ionization": "(H+)-",
    },
    "mw": 580.4486752178418,
    "parts": Array [
      "O-2P-1DampDgmpH",
    ],
    "unsaturation": 14,
  },
  Object {
    "atoms": Object {
      "C": 29,
      "H": 37,
      "N": 13,
      "O": 15,
      "P": 2,
    },
    "charge": 0,
    "comment": "y3",
    "em": 869.20073154049,
    "ionization": Object {
      "charge": 0,
      "em": 1.00782503223,
      "mf": "(H+)-",
    },
    "mf": "C29H37N13O15P2",
    "ms": Object {
      "charge": 0,
      "em": 0,
      "ionization": "(H+)-",
    },
    "mw": 869.6308885157955,
    "parts": Array [
      "O-2P-1DcmpDampDgmpH",
    ],
    "unsaturation": 19,
  },
  Object {
    "atoms": Object {
      "C": 39,
      "H": 49,
      "N": 18,
      "O": 21,
      "P": 3,
    },
    "charge": 0,
    "comment": "y4",
    "em": 1198.25325166524,
    "ionization": Object {
      "charge": 0,
      "em": 1.00782503223,
      "mf": "(H+)-",
    },
    "mf": "C39H49N18O21P3",
    "ms": Object {
      "charge": 0,
      "em": 0,
      "ionization": "(H+)-",
    },
    "mw": 1198.8372441333759,
    "parts": Array [
      "O-2P-1DgmpDcmpDampDgmpH",
    ],
    "unsaturation": 26,
  },
  Object {
    "atoms": Object {
      "C": 49,
      "H": 61,
      "N": 23,
      "O": 27,
      "P": 4,
    },
    "charge": 0,
    "comment": "y5",
    "em": 1527.3057717899899,
    "ionization": Object {
      "charge": 0,
      "em": 1.00782503223,
      "mf": "(H+)-",
    },
    "mf": "C49H61N23O27P4",
    "ms": Object {
      "charge": 0,
      "em": 0,
      "ionization": "(H+)-",
    },
    "mw": 1528.0435997509564,
    "parts": Array [
      "O-2P-1DgmpDgmpDcmpDampDgmpH",
    ],
    "unsaturation": 33,
  },
  Object {
    "atoms": Object {
      "C": 59,
      "H": 74,
      "N": 28,
      "O": 35,
      "P": 6,
    },
    "charge": 0,
    "em": 1920.3297081845299,
    "ionization": Object {
      "charge": 0,
      "em": 1.00782503223,
      "mf": "(H+)-",
    },
    "mf": "C59H74N28O35P6",
    "ms": Object {
      "charge": 0,
      "em": 0,
      "ionization": "(H+)-",
    },
    "mw": 1921.230467969649,
    "parts": Array [
      "HODampDgmpDgmpDcmpDampDgmpH",
    ],
    "unsaturation": 40,
  },
]
`;

exports[`TACGTGCCAATAC internal fragment 1`] = `
Array [
  Object {
    "atoms": Object {
      "C": 14,
      "H": 19,
      "N": 3,
      "O": 11,
      "P": 2,
    },
    "charge": 0,
    "comment": "w11:a-B4",
    "em": 467.04948243777,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C14H19N3O11P2",
    "ms": Object {
      "charge": -5,
      "em": 92.40262003523306,
      "ionization": "(H+)-5",
    },
    "mw": 467.2622646800317,
    "parts": Array [
      "HODcmpC5H6O4P",
    ],
    "unsaturation": 8,
  },
  Object {
    "atoms": Object {
      "C": 14,
      "H": 19,
      "N": 3,
      "O": 11,
      "P": 2,
    },
    "charge": 0,
    "comment": "w7:a-B8",
    "em": 467.04948243777,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C14H19N3O11P2",
    "ms": Object {
      "charge": -5,
      "em": 92.40262003523306,
      "ionization": "(H+)-5",
    },
    "mw": 467.2622646800317,
    "parts": Array [
      "HODcmpC5H6O4P",
    ],
    "unsaturation": 8,
  },
  Object {
    "atoms": Object {
      "C": 14,
      "H": 19,
      "N": 3,
      "O": 11,
      "P": 2,
    },
    "charge": 0,
    "comment": "w6:a-B9",
    "em": 467.04948243777,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C14H19N3O11P2",
    "ms": Object {
      "charge": -5,
      "em": 92.40262003523306,
      "ionization": "(H+)-5",
    },
    "mw": 467.2622646800317,
    "parts": Array [
      "HODcmpC5H6O4P",
    ],
    "unsaturation": 8,
  },
  Object {
    "atoms": Object {
      "C": 15,
      "H": 20,
      "N": 2,
      "O": 12,
      "P": 2,
    },
    "charge": 0,
    "comment": "w9:a-B6",
    "em": 482.04914808514,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C15H20N2O12P2",
    "ms": Object {
      "charge": -5,
      "em": 95.40255316470706,
      "ionization": "(H+)-5",
    },
    "mw": 482.2736430436952,
    "parts": Array [
      "HODtmpC5H6O4P",
    ],
    "unsaturation": 8,
  },
  Object {
    "atoms": Object {
      "C": 15,
      "H": 20,
      "N": 2,
      "O": 12,
      "P": 2,
    },
    "charge": 0,
    "comment": "w3:a-B12",
    "em": 482.04914808514,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C15H20N2O12P2",
    "ms": Object {
      "charge": -5,
      "em": 95.40255316470706,
      "ionization": "(H+)-5",
    },
    "mw": 482.2736430436952,
    "parts": Array [
      "HODtmpC5H6O4P",
    ],
    "unsaturation": 8,
  },
  Object {
    "atoms": Object {
      "C": 15,
      "H": 19,
      "N": 5,
      "O": 10,
      "P": 2,
    },
    "charge": 0,
    "comment": "w12:a-B3",
    "em": 491.06071582706,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C15H19N5O10P2",
    "ms": Object {
      "charge": -5,
      "em": 97.20486671309106,
      "ionization": "(H+)-5",
    },
    "mw": 491.28700207534024,
    "parts": Array [
      "HODampC5H6O4P",
    ],
    "unsaturation": 10,
  },
  Object {
    "atoms": Object {
      "C": 15,
      "H": 19,
      "N": 5,
      "O": 10,
      "P": 2,
    },
    "charge": 0,
    "comment": "w5:a-B10",
    "em": 491.06071582706,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C15H19N5O10P2",
    "ms": Object {
      "charge": -5,
      "em": 97.20486671309106,
      "ionization": "(H+)-5",
    },
    "mw": 491.28700207534024,
    "parts": Array [
      "HODampC5H6O4P",
    ],
    "unsaturation": 10,
  },
  Object {
    "atoms": Object {
      "C": 15,
      "H": 19,
      "N": 5,
      "O": 10,
      "P": 2,
    },
    "charge": 0,
    "comment": "w4:a-B11",
    "em": 491.06071582706,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C15H19N5O10P2",
    "ms": Object {
      "charge": -5,
      "em": 97.20486671309106,
      "ionization": "(H+)-5",
    },
    "mw": 491.28700207534024,
    "parts": Array [
      "HODampC5H6O4P",
    ],
    "unsaturation": 10,
  },
  Object {
    "atoms": Object {
      "C": 15,
      "H": 19,
      "N": 5,
      "O": 11,
      "P": 2,
    },
    "charge": 0,
    "comment": "w10:a-B5",
    "em": 507.05563044663,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C15H19N5O11P2",
    "ms": Object {
      "charge": -5,
      "em": 100.40384963700507,
      "ionization": "(H+)-5",
    },
    "mw": 507.28640699965854,
    "parts": Array [
      "HODgmpC5H6O4P",
    ],
    "unsaturation": 10,
  },
  Object {
    "atoms": Object {
      "C": 15,
      "H": 19,
      "N": 5,
      "O": 11,
      "P": 2,
    },
    "charge": 0,
    "comment": "w8:a-B7",
    "em": 507.05563044663,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C15H19N5O11P2",
    "ms": Object {
      "charge": -5,
      "em": 100.40384963700507,
      "ionization": "(H+)-5",
    },
    "mw": 507.28640699965854,
    "parts": Array [
      "HODgmpC5H6O4P",
    ],
    "unsaturation": 10,
  },
  Object {
    "atoms": Object {
      "C": 23,
      "H": 31,
      "N": 6,
      "O": 17,
      "P": 3,
    },
    "charge": 0,
    "comment": "w7:a-B9",
    "em": 756.0958545536599,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C23H31N6O17P3",
    "ms": Object {
      "charge": -5,
      "em": 150.21189445841105,
      "ionization": "(H+)-5",
    },
    "mw": 756.4444779779853,
    "parts": Array [
      "HODcmpDcmpC5H6O4P",
    ],
    "unsaturation": 13,
  },
  Object {
    "atoms": Object {
      "C": 24,
      "H": 31,
      "N": 8,
      "O": 16,
      "P": 3,
    },
    "charge": 0,
    "comment": "w12:a-B4",
    "em": 780.1070879429499,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C24H31N8O16P3",
    "ms": Object {
      "charge": -5,
      "em": 155.01414113626905,
      "ionization": "(H+)-5",
    },
    "mw": 780.4692153732938,
    "parts": Array [
      "HODampDcmpC5H6O4P",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 24,
      "H": 31,
      "N": 8,
      "O": 16,
      "P": 3,
    },
    "charge": 0,
    "comment": "w6:a-B10",
    "em": 780.1070879429499,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C24H31N8O16P3",
    "ms": Object {
      "charge": -5,
      "em": 155.01414113626905,
      "ionization": "(H+)-5",
    },
    "mw": 780.4692153732938,
    "parts": Array [
      "HODcmpDampC5H6O4P",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 25,
      "H": 32,
      "N": 7,
      "O": 17,
      "P": 3,
    },
    "charge": 0,
    "comment": "w4:a-B12",
    "em": 795.10675359032,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C25H32N7O17P3",
    "ms": Object {
      "charge": -5,
      "em": 158.01407426574306,
      "ionization": "(H+)-5",
    },
    "mw": 795.4805937369574,
    "parts": Array [
      "HODampDtmpC5H6O4P",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 24,
      "H": 31,
      "N": 8,
      "O": 17,
      "P": 3,
    },
    "charge": 0,
    "comment": "w11:a-B5",
    "em": 796.1020025625199,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C24H31N8O17P3",
    "ms": Object {
      "charge": -5,
      "em": 158.21312406018305,
      "ionization": "(H+)-5",
    },
    "mw": 796.4686202976121,
    "parts": Array [
      "HODcmpDgmpC5H6O4P",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 24,
      "H": 31,
      "N": 8,
      "O": 17,
      "P": 3,
    },
    "charge": 0,
    "comment": "w8:a-B8",
    "em": 796.1020025625199,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C24H31N8O17P3",
    "ms": Object {
      "charge": -5,
      "em": 158.21312406018305,
      "ionization": "(H+)-5",
    },
    "mw": 796.4686202976121,
    "parts": Array [
      "HODgmpDcmpC5H6O4P",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 25,
      "H": 31,
      "N": 10,
      "O": 15,
      "P": 3,
    },
    "charge": 0,
    "comment": "w5:a-B11",
    "em": 804.1183213322399,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C25H31N10O15P3",
    "ms": Object {
      "charge": -5,
      "em": 159.81638781412707,
      "ionization": "(H+)-5",
    },
    "mw": 804.4939527686024,
    "parts": Array [
      "HODampDampC5H6O4P",
    ],
    "unsaturation": 17,
  },
  Object {
    "atoms": Object {
      "C": 25,
      "H": 32,
      "N": 7,
      "O": 18,
      "P": 3,
    },
    "charge": 0,
    "comment": "w10:a-B6",
    "em": 811.10166820989,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C25H32N7O18P3",
    "ms": Object {
      "charge": -5,
      "em": 161.21305718965706,
      "ionization": "(H+)-5",
    },
    "mw": 811.4799986612757,
    "parts": Array [
      "HODgmpDtmpC5H6O4P",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 25,
      "H": 32,
      "N": 7,
      "O": 18,
      "P": 3,
    },
    "charge": 0,
    "comment": "w9:a-B7",
    "em": 811.10166820989,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C25H32N7O18P3",
    "ms": Object {
      "charge": -5,
      "em": 161.21305718965706,
      "ionization": "(H+)-5",
    },
    "mw": 811.4799986612757,
    "parts": Array [
      "HODtmpDgmpC5H6O4P",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 33,
      "H": 43,
      "N": 11,
      "O": 22,
      "P": 4,
    },
    "charge": 0,
    "comment": "w7:a-B10",
    "em": 1069.15346005884,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C33H43N11O22P4",
    "ms": Object {
      "charge": -5,
      "em": 212.82341555944706,
      "ionization": "(H+)-5",
    },
    "mw": 1069.6514286712475,
    "parts": Array [
      "HODcmpDcmpDampC5H6O4P",
    ],
    "unsaturation": 20,
  },
  Object {
    "atoms": Object {
      "C": 33,
      "H": 43,
      "N": 11,
      "O": 23,
      "P": 4,
    },
    "charge": 0,
    "comment": "w8:a-B9",
    "em": 1085.1483746784102,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C33H43N11O23P4",
    "ms": Object {
      "charge": -5,
      "em": 216.02239848336112,
      "ionization": "(H+)-5",
    },
    "mw": 1085.6508335955657,
    "parts": Array [
      "HODgmpDcmpDcmpC5H6O4P",
    ],
    "unsaturation": 20,
  },
  Object {
    "atoms": Object {
      "C": 34,
      "H": 43,
      "N": 13,
      "O": 21,
      "P": 4,
    },
    "charge": 0,
    "comment": "w6:a-B11",
    "em": 1093.16469344813,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C34H43N13O21P4",
    "ms": Object {
      "charge": -5,
      "em": 217.62566223730508,
      "ionization": "(H+)-5",
    },
    "mw": 1093.676166066556,
    "parts": Array [
      "HODcmpDampDampC5H6O4P",
    ],
    "unsaturation": 22,
  },
  Object {
    "atoms": Object {
      "C": 34,
      "H": 44,
      "N": 10,
      "O": 24,
      "P": 4,
    },
    "charge": 0,
    "comment": "w11:a-B6",
    "em": 1100.14804032578,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C34H44N10O24P4",
    "ms": Object {
      "charge": -5,
      "em": 219.02233161283505,
      "ionization": "(H+)-5",
    },
    "mw": 1100.6622119592294,
    "parts": Array [
      "HODcmpDgmpDtmpC5H6O4P",
    ],
    "unsaturation": 20,
  },
  Object {
    "atoms": Object {
      "C": 34,
      "H": 44,
      "N": 10,
      "O": 24,
      "P": 4,
    },
    "charge": 0,
    "comment": "w9:a-B8",
    "em": 1100.14804032578,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C34H44N10O24P4",
    "ms": Object {
      "charge": -5,
      "em": 219.02233161283505,
      "ionization": "(H+)-5",
    },
    "mw": 1100.6622119592294,
    "parts": Array [
      "HODtmpDgmpDcmpC5H6O4P",
    ],
    "unsaturation": 20,
  },
  Object {
    "atoms": Object {
      "C": 35,
      "H": 44,
      "N": 12,
      "O": 22,
      "P": 4,
    },
    "charge": 0,
    "comment": "w5:a-B12",
    "em": 1108.1643590955,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C35H44N12O22P4",
    "ms": Object {
      "charge": -5,
      "em": 220.62559536677907,
      "ionization": "(H+)-5",
    },
    "mw": 1108.6875444302195,
    "parts": Array [
      "HODampDampDtmpC5H6O4P",
    ],
    "unsaturation": 22,
  },
  Object {
    "atoms": Object {
      "C": 34,
      "H": 43,
      "N": 13,
      "O": 22,
      "P": 4,
    },
    "charge": 0,
    "comment": "w12:a-B5",
    "em": 1109.1596080677,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C34H43N13O22P4",
    "ms": Object {
      "charge": -5,
      "em": 220.82464516121908,
      "ionization": "(H+)-5",
    },
    "mw": 1109.6755709908743,
    "parts": Array [
      "HODampDcmpDgmpC5H6O4P",
    ],
    "unsaturation": 22,
  },
  Object {
    "atoms": Object {
      "C": 35,
      "H": 44,
      "N": 12,
      "O": 24,
      "P": 4,
    },
    "charge": 0,
    "comment": "w10:a-B7",
    "em": 1140.15418833464,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C35H44N12O24P4",
    "ms": Object {
      "charge": -5,
      "em": 227.02356121460704,
      "ionization": "(H+)-5",
    },
    "mw": 1140.686354278856,
    "parts": Array [
      "HODgmpDtmpDgmpC5H6O4P",
    ],
    "unsaturation": 22,
  },
  Object {
    "atoms": Object {
      "C": 43,
      "H": 55,
      "N": 16,
      "O": 27,
      "P": 5,
    },
    "charge": 0,
    "comment": "w7:a-B11",
    "em": 1382.21106556402,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C43H55N16O27P5",
    "ms": Object {
      "charge": -5,
      "em": 275.43493666048306,
      "ionization": "(H+)-5",
    },
    "mw": 1382.8583793645098,
    "parts": Array [
      "HODcmpDcmpDampDampC5H6O4P",
    ],
    "unsaturation": 27,
  },
  Object {
    "atoms": Object {
      "C": 43,
      "H": 56,
      "N": 13,
      "O": 30,
      "P": 5,
    },
    "charge": 0,
    "comment": "w9:a-B9",
    "em": 1389.19441244167,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C43H56N13O30P5",
    "ms": Object {
      "charge": -5,
      "em": 276.8316060360131,
      "ionization": "(H+)-5",
    },
    "mw": 1389.844425257183,
    "parts": Array [
      "HODtmpDgmpDcmpDcmpC5H6O4P",
    ],
    "unsaturation": 25,
  },
  Object {
    "atoms": Object {
      "C": 44,
      "H": 56,
      "N": 15,
      "O": 28,
      "P": 5,
    },
    "charge": 0,
    "comment": "w6:a-B12",
    "em": 1397.21073121139,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C44H56N15O28P5",
    "ms": Object {
      "charge": -5,
      "em": 278.43486978995713,
      "ionization": "(H+)-5",
    },
    "mw": 1397.8697577281732,
    "parts": Array [
      "HODcmpDampDampDtmpC5H6O4P",
    ],
    "unsaturation": 27,
  },
  Object {
    "atoms": Object {
      "C": 43,
      "H": 55,
      "N": 16,
      "O": 28,
      "P": 5,
    },
    "charge": 0,
    "comment": "w8:a-B10",
    "em": 1398.20598018359,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C43H55N16O28P5",
    "ms": Object {
      "charge": -5,
      "em": 278.6339195843971,
      "ionization": "(H+)-5",
    },
    "mw": 1398.857784288828,
    "parts": Array [
      "HODgmpDcmpDcmpDampC5H6O4P",
    ],
    "unsaturation": 27,
  },
  Object {
    "atoms": Object {
      "C": 44,
      "H": 56,
      "N": 15,
      "O": 29,
      "P": 5,
    },
    "charge": 0,
    "comment": "w12:a-B6",
    "em": 1413.20564583096,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C44H56N15O29P5",
    "ms": Object {
      "charge": -5,
      "em": 281.63385271387114,
      "ionization": "(H+)-5",
    },
    "mw": 1413.8691626524915,
    "parts": Array [
      "HODampDcmpDgmpDtmpC5H6O4P",
    ],
    "unsaturation": 27,
  },
  Object {
    "atoms": Object {
      "C": 44,
      "H": 56,
      "N": 15,
      "O": 30,
      "P": 5,
    },
    "charge": 0,
    "comment": "w11:a-B7",
    "em": 1429.20056045053,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C44H56N15O30P5",
    "ms": Object {
      "charge": -5,
      "em": 284.8328356377851,
      "ionization": "(H+)-5",
    },
    "mw": 1429.86856757681,
    "parts": Array [
      "HODcmpDgmpDtmpDgmpC5H6O4P",
    ],
    "unsaturation": 27,
  },
  Object {
    "atoms": Object {
      "C": 44,
      "H": 56,
      "N": 15,
      "O": 30,
      "P": 5,
    },
    "charge": 0,
    "comment": "w10:a-B8",
    "em": 1429.20056045053,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C44H56N15O30P5",
    "ms": Object {
      "charge": -5,
      "em": 284.8328356377851,
      "ionization": "(H+)-5",
    },
    "mw": 1429.86856757681,
    "parts": Array [
      "HODgmpDtmpDgmpDcmpC5H6O4P",
    ],
    "unsaturation": 27,
  },
  Object {
    "atoms": Object {
      "C": 53,
      "H": 68,
      "N": 18,
      "O": 34,
      "P": 6,
    },
    "charge": 0,
    "comment": "w7:a-B12",
    "em": 1686.2571033272798,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C53H68N18O34P6",
    "ms": Object {
      "charge": -5,
      "em": 336.24414421313503,
      "ionization": "(H+)-5",
    },
    "mw": 1687.0519710261267,
    "parts": Array [
      "HODcmpDcmpDampDampDtmpC5H6O4P",
    ],
    "unsaturation": 32,
  },
  Object {
    "atoms": Object {
      "C": 53,
      "H": 68,
      "N": 18,
      "O": 35,
      "P": 6,
    },
    "charge": 0,
    "comment": "w9:a-B10",
    "em": 1702.2520179468497,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C53H68N18O35P6",
    "ms": Object {
      "charge": -5,
      "em": 339.44312713704903,
      "ionization": "(H+)-5",
    },
    "mw": 1703.051375950445,
    "parts": Array [
      "HODtmpDgmpDcmpDcmpDampC5H6O4P",
    ],
    "unsaturation": 32,
  },
  Object {
    "atoms": Object {
      "C": 53,
      "H": 67,
      "N": 21,
      "O": 33,
      "P": 6,
    },
    "charge": 0,
    "comment": "w8:a-B11",
    "em": 1711.2635856887698,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C53H67N21O33P6",
    "ms": Object {
      "charge": -5,
      "em": 341.24544068543304,
      "ionization": "(H+)-5",
    },
    "mw": 1712.06473498209,
    "parts": Array [
      "HODgmpDcmpDcmpDampDampC5H6O4P",
    ],
    "unsaturation": 34,
  },
  Object {
    "atoms": Object {
      "C": 53,
      "H": 68,
      "N": 18,
      "O": 36,
      "P": 6,
    },
    "charge": 0,
    "comment": "w11:a-B8",
    "em": 1718.24693256642,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C53H68N18O36P6",
    "ms": Object {
      "charge": -5,
      "em": 342.6421100609631,
      "ionization": "(H+)-5",
    },
    "mw": 1719.0507808747632,
    "parts": Array [
      "HODcmpDgmpDtmpDgmpDcmpC5H6O4P",
    ],
    "unsaturation": 32,
  },
  Object {
    "atoms": Object {
      "C": 53,
      "H": 68,
      "N": 18,
      "O": 36,
      "P": 6,
    },
    "charge": 0,
    "comment": "w10:a-B9",
    "em": 1718.24693256642,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C53H68N18O36P6",
    "ms": Object {
      "charge": -5,
      "em": 342.6421100609631,
      "ionization": "(H+)-5",
    },
    "mw": 1719.0507808747632,
    "parts": Array [
      "HODgmpDtmpDgmpDcmpDcmpC5H6O4P",
    ],
    "unsaturation": 32,
  },
  Object {
    "atoms": Object {
      "C": 54,
      "H": 68,
      "N": 20,
      "O": 35,
      "P": 6,
    },
    "charge": 0,
    "comment": "w12:a-B7",
    "em": 1742.25816595571,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C54H68N20O35P6",
    "ms": Object {
      "charge": -5,
      "em": 347.4443567388211,
      "ionization": "(H+)-5",
    },
    "mw": 1743.0755182700718,
    "parts": Array [
      "HODampDcmpDgmpDtmpDgmpC5H6O4P",
    ],
    "unsaturation": 34,
  },
  Object {
    "atoms": Object {
      "C": 62,
      "H": 80,
      "N": 21,
      "O": 42,
      "P": 7,
    },
    "charge": 0,
    "comment": "w11:a-B9",
    "em": 2007.2933046823098,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C62H80N21O42P7",
    "ms": Object {
      "charge": -5,
      "em": 400.45138448414104,
      "ionization": "(H+)-5",
    },
    "mw": 2008.2329941727169,
    "parts": Array [
      "HODcmpDgmpDtmpDgmpDcmpDcmpC5H6O4P",
    ],
    "unsaturation": 37,
  },
  Object {
    "atoms": Object {
      "C": 63,
      "H": 80,
      "N": 23,
      "O": 40,
      "P": 7,
    },
    "charge": 0,
    "comment": "w9:a-B11",
    "em": 2015.3096234520299,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C63H80N23O40P7",
    "ms": Object {
      "charge": -5,
      "em": 402.05464823808506,
      "ionization": "(H+)-5",
    },
    "mw": 2016.258326643707,
    "parts": Array [
      "HODtmpDgmpDcmpDcmpDampDampC5H6O4P",
    ],
    "unsaturation": 39,
  },
  Object {
    "atoms": Object {
      "C": 63,
      "H": 80,
      "N": 23,
      "O": 40,
      "P": 7,
    },
    "charge": 0,
    "comment": "w8:a-B12",
    "em": 2015.3096234520299,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C63H80N23O40P7",
    "ms": Object {
      "charge": -5,
      "em": 402.05464823808506,
      "ionization": "(H+)-5",
    },
    "mw": 2016.258326643707,
    "parts": Array [
      "HODgmpDcmpDcmpDampDampDtmpC5H6O4P",
    ],
    "unsaturation": 39,
  },
  Object {
    "atoms": Object {
      "C": 63,
      "H": 80,
      "N": 23,
      "O": 41,
      "P": 7,
    },
    "charge": 0,
    "comment": "w12:a-B8",
    "em": 2031.3045380716,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C63H80N23O41P7",
    "ms": Object {
      "charge": -5,
      "em": 405.2536311619991,
      "ionization": "(H+)-5",
    },
    "mw": 2032.2577315680253,
    "parts": Array [
      "HODampDcmpDgmpDtmpDgmpDcmpC5H6O4P",
    ],
    "unsaturation": 39,
  },
  Object {
    "atoms": Object {
      "C": 63,
      "H": 80,
      "N": 23,
      "O": 41,
      "P": 7,
    },
    "charge": 0,
    "comment": "w10:a-B10",
    "em": 2031.3045380716,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C63H80N23O41P7",
    "ms": Object {
      "charge": -5,
      "em": 405.2536311619991,
      "ionization": "(H+)-5",
    },
    "mw": 2032.2577315680253,
    "parts": Array [
      "HODgmpDtmpDgmpDcmpDcmpDampC5H6O4P",
    ],
    "unsaturation": 39,
  },
  Object {
    "atoms": Object {
      "C": 73,
      "H": 93,
      "N": 25,
      "O": 47,
      "P": 8,
    },
    "charge": 0,
    "comment": "w9:a-B12",
    "em": 2319.35566121529,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C73H93N25O47P8",
    "ms": Object {
      "charge": -5,
      "em": 462.86385579073715,
      "ionization": "(H+)-5",
    },
    "mw": 2320.4519183053244,
    "parts": Array [
      "HODtmpDgmpDcmpDcmpDampDampDtmpC5H6O4P",
    ],
    "unsaturation": 44,
  },
  Object {
    "atoms": Object {
      "C": 72,
      "H": 92,
      "N": 26,
      "O": 47,
      "P": 8,
    },
    "charge": 0,
    "comment": "w12:a-B9",
    "em": 2320.35091018749,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C72H92N26O47P8",
    "ms": Object {
      "charge": -5,
      "em": 463.06290558517713,
      "ionization": "(H+)-5",
    },
    "mw": 2321.439944865979,
    "parts": Array [
      "HODampDcmpDgmpDtmpDgmpDcmpDcmpC5H6O4P",
    ],
    "unsaturation": 44,
  },
  Object {
    "atoms": Object {
      "C": 72,
      "H": 92,
      "N": 26,
      "O": 47,
      "P": 8,
    },
    "charge": 0,
    "comment": "w11:a-B10",
    "em": 2320.35091018749,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C72H92N26O47P8",
    "ms": Object {
      "charge": -5,
      "em": 463.06290558517713,
      "ionization": "(H+)-5",
    },
    "mw": 2321.439944865979,
    "parts": Array [
      "HODcmpDgmpDtmpDgmpDcmpDcmpDampC5H6O4P",
    ],
    "unsaturation": 44,
  },
  Object {
    "atoms": Object {
      "C": 73,
      "H": 92,
      "N": 28,
      "O": 46,
      "P": 8,
    },
    "charge": 0,
    "comment": "w10:a-B11",
    "em": 2344.36214357678,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C73H92N28O46P8",
    "ms": Object {
      "charge": -5,
      "em": 467.8651522630351,
      "ionization": "(H+)-5",
    },
    "mw": 2345.464682261288,
    "parts": Array [
      "HODgmpDtmpDgmpDcmpDcmpDampDampC5H6O4P",
    ],
    "unsaturation": 46,
  },
  Object {
    "atoms": Object {
      "C": 82,
      "H": 104,
      "N": 31,
      "O": 52,
      "P": 9,
    },
    "charge": 0,
    "comment": "w12:a-B10",
    "em": 2633.40851569267,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C82H104N31O52P9",
    "ms": Object {
      "charge": -5,
      "em": 525.674426686213,
      "ionization": "(H+)-5",
    },
    "mw": 2634.6468955592413,
    "parts": Array [
      "HODampDcmpDgmpDtmpDgmpDcmpDcmpDampC5H6O4P",
    ],
    "unsaturation": 51,
  },
  Object {
    "atoms": Object {
      "C": 82,
      "H": 104,
      "N": 31,
      "O": 52,
      "P": 9,
    },
    "charge": 0,
    "comment": "w11:a-B11",
    "em": 2633.40851569267,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C82H104N31O52P9",
    "ms": Object {
      "charge": -5,
      "em": 525.674426686213,
      "ionization": "(H+)-5",
    },
    "mw": 2634.6468955592413,
    "parts": Array [
      "HODcmpDgmpDtmpDgmpDcmpDcmpDampDampC5H6O4P",
    ],
    "unsaturation": 51,
  },
  Object {
    "atoms": Object {
      "C": 83,
      "H": 105,
      "N": 30,
      "O": 53,
      "P": 9,
    },
    "charge": 0,
    "comment": "w10:a-B12",
    "em": 2648.40818134004,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C83H105N30O53P9",
    "ms": Object {
      "charge": -5,
      "em": 528.674359815687,
      "ionization": "(H+)-5",
    },
    "mw": 2649.6582739229048,
    "parts": Array [
      "HODgmpDtmpDgmpDcmpDcmpDampDampDtmpC5H6O4P",
    ],
    "unsaturation": 51,
  },
  Object {
    "atoms": Object {
      "C": 92,
      "H": 117,
      "N": 33,
      "O": 59,
      "P": 10,
    },
    "charge": 0,
    "comment": "w11:a-B12",
    "em": 2937.45455345593,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C92H117N33O59P10",
    "ms": Object {
      "charge": -5,
      "em": 586.4836342388651,
      "ionization": "(H+)-5",
    },
    "mw": 2938.8404872208584,
    "parts": Array [
      "HODcmpDgmpDtmpDgmpDcmpDcmpDampDampDtmpC5H6O4P",
    ],
    "unsaturation": 56,
  },
  Object {
    "atoms": Object {
      "C": 92,
      "H": 116,
      "N": 36,
      "O": 57,
      "P": 10,
    },
    "charge": 0,
    "comment": "w12:a-B11",
    "em": 2946.46612119785,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C92H116N36O57P10",
    "ms": Object {
      "charge": -5,
      "em": 588.285947787249,
      "ionization": "(H+)-5",
    },
    "mw": 2947.853846252504,
    "parts": Array [
      "HODampDcmpDgmpDtmpDgmpDcmpDcmpDampDampC5H6O4P",
    ],
    "unsaturation": 58,
  },
  Object {
    "atoms": Object {
      "C": 102,
      "H": 129,
      "N": 38,
      "O": 64,
      "P": 11,
    },
    "charge": 0,
    "comment": "w12:a-B12",
    "em": 3250.51215896111,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C102H129N38O64P11",
    "ms": Object {
      "charge": -5,
      "em": 649.095155339901,
      "ionization": "(H+)-5",
    },
    "mw": 3252.0474379141206,
    "parts": Array [
      "HODampDcmpDgmpDtmpDgmpDcmpDcmpDampDampDtmpC5H6O4P",
    ],
    "unsaturation": 63,
  },
  Object {
    "atoms": Object {
      "C": 126,
      "H": 161,
      "N": 48,
      "O": 78,
      "P": 13,
    },
    "charge": 0,
    "em": 3996.66962870759,
    "ionization": Object {
      "charge": -5,
      "em": -5.03912516115,
      "mf": "(H+)-5",
    },
    "mf": "C126H161N48O78P13",
    "ms": Object {
      "charge": -5,
      "em": 798.3266492891971,
      "ionization": "(H+)-5",
    },
    "mw": 3998.5654286173053,
    "parts": Array [
      "HODtmpDampDcmpDgmpDtmpDgmpDcmpDcmpDampDampDtmpDampDcmpH",
    ],
    "unsaturation": 77,
  },
]
`;

exports[`fromNucleicSequence 1`] = `
Array [
  Object {
    "atoms": Object {
      "C": 10,
      "H": 12,
      "N": 5,
      "O": 5,
      "P": 1,
    },
    "charge": 0,
    "comment": "a1",
    "em": 313.05760550518,
    "ionization": Object {
      "charge": 1,
      "em": 1.00782503223,
      "mf": "H+",
    },
    "mf": "C10H12N5O5P",
    "ms": Object {
      "charge": 1,
      "em": 314.0648819575009,
      "ionization": "H+",
    },
    "mw": 313.2069506932622,
    "parts": Array [
      "HODampO-1H-1",
    ],
    "unsaturation": 8,
  },
  Object {
    "atoms": Object {
      "C": 10,
      "H": 12,
      "N": 5,
      "O": 5,
      "P": 1,
    },
    "charge": 0,
    "comment": "a1",
    "em": 313.05760550518,
    "ionization": Object {
      "charge": 1,
      "em": 22.989769282,
      "mf": "Na+",
    },
    "mf": "C10H12N5O5P",
    "ms": Object {
      "charge": 1,
      "em": 336.0468262072709,
      "ionization": "Na+",
    },
    "mw": 313.2069506932622,
    "parts": Array [
      "HODampO-1H-1",
    ],
    "unsaturation": 8,
  },
  Object {
    "atoms": Object {
      "C": 20,
      "H": 24,
      "N": 10,
      "O": 10,
      "P": 2,
    },
    "charge": 0,
    "comment": "a2",
    "em": 626.11521101036,
    "ionization": Object {
      "charge": 1,
      "em": 1.00782503223,
      "mf": "H+",
    },
    "mf": "C20H24N10O10P2",
    "ms": Object {
      "charge": 1,
      "em": 627.122487462681,
      "ionization": "H+",
    },
    "mw": 626.4139013865243,
    "parts": Array [
      "HODampDampO-1H-1",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 20,
      "H": 24,
      "N": 10,
      "O": 10,
      "P": 2,
    },
    "charge": 0,
    "comment": "a2",
    "em": 626.11521101036,
    "ionization": Object {
      "charge": 1,
      "em": 22.989769282,
      "mf": "Na+",
    },
    "mf": "C20H24N10O10P2",
    "ms": Object {
      "charge": 1,
      "em": 649.104431712451,
      "ionization": "Na+",
    },
    "mw": 626.4139013865243,
    "parts": Array [
      "HODampDampO-1H-1",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 30,
      "H": 38,
      "N": 15,
      "O": 16,
      "P": 3,
    },
    "charge": 0,
    "em": 957.18338119957,
    "ionization": Object {
      "charge": 1,
      "em": 1.00782503223,
      "mf": "H+",
    },
    "mf": "C30H38N15O16P3",
    "ms": Object {
      "charge": 1,
      "em": 958.190657651891,
      "ionization": "H+",
    },
    "mw": 957.6361385122163,
    "parts": Array [
      "HODampDampDampH",
    ],
    "unsaturation": 21,
  },
  Object {
    "atoms": Object {
      "C": 30,
      "H": 38,
      "N": 15,
      "O": 16,
      "P": 3,
    },
    "charge": 0,
    "em": 957.18338119957,
    "ionization": Object {
      "charge": 1,
      "em": 22.989769282,
      "mf": "Na+",
    },
    "mf": "C30H38N15O16P3",
    "ms": Object {
      "charge": 1,
      "em": 980.172601901661,
      "ionization": "Na+",
    },
    "mw": 957.6361385122163,
    "parts": Array [
      "HODampDampDampH",
    ],
    "unsaturation": 21,
  },
]
`;

exports[`fromNucleicSequence ds-DNA 1`] = `
Array [
  Object {
    "atoms": Object {
      "C": 10,
      "H": 13,
      "N": 2,
      "O": 7,
      "P": 1,
    },
    "charge": 0,
    "comment": "cmp-a1",
    "em": 304.04603776326,
    "ionization": Object {
      "charge": 1,
      "em": 1.00782503223,
      "mf": "H+",
    },
    "mf": "C10H13N2O7P",
    "ms": Object {
      "charge": 1,
      "em": 305.05331421558094,
      "ionization": "H+",
    },
    "mw": 304.1935916616171,
    "parts": Array [
      "HODtmpO-1H-1",
    ],
    "unsaturation": 6,
  },
  Object {
    "atoms": Object {
      "C": 10,
      "H": 12,
      "N": 5,
      "O": 5,
      "P": 1,
    },
    "charge": 0,
    "comment": "a1",
    "em": 313.05760550518,
    "ionization": Object {
      "charge": 1,
      "em": 1.00782503223,
      "mf": "H+",
    },
    "mf": "C10H12N5O5P",
    "ms": Object {
      "charge": 1,
      "em": 314.0648819575009,
      "ionization": "H+",
    },
    "mw": 313.2069506932622,
    "parts": Array [
      "HODampO-1H-1",
    ],
    "unsaturation": 8,
  },
  Object {
    "atoms": Object {
      "C": 10,
      "H": 13,
      "N": 2,
      "O": 7,
      "P": 1,
    },
    "charge": 0,
    "comment": "cmp-a1",
    "em": 304.04603776326,
    "ionization": Object {
      "charge": 1,
      "em": 22.989769282,
      "mf": "Na+",
    },
    "mf": "C10H13N2O7P",
    "ms": Object {
      "charge": 1,
      "em": 327.0352584653509,
      "ionization": "Na+",
    },
    "mw": 304.1935916616171,
    "parts": Array [
      "HODtmpO-1H-1",
    ],
    "unsaturation": 6,
  },
  Object {
    "atoms": Object {
      "C": 10,
      "H": 12,
      "N": 5,
      "O": 5,
      "P": 1,
    },
    "charge": 0,
    "comment": "a1",
    "em": 313.05760550518,
    "ionization": Object {
      "charge": 1,
      "em": 22.989769282,
      "mf": "Na+",
    },
    "mf": "C10H12N5O5P",
    "ms": Object {
      "charge": 1,
      "em": 336.0468262072709,
      "ionization": "Na+",
    },
    "mw": 313.2069506932622,
    "parts": Array [
      "HODampO-1H-1",
    ],
    "unsaturation": 8,
  },
  Object {
    "atoms": Object {
      "C": 20,
      "H": 26,
      "N": 4,
      "O": 14,
      "P": 2,
    },
    "charge": 0,
    "comment": "cmp-a2",
    "em": 608.09207552652,
    "ionization": Object {
      "charge": 1,
      "em": 1.00782503223,
      "mf": "H+",
    },
    "mf": "C20H26N4O14P2",
    "ms": Object {
      "charge": 1,
      "em": 609.099351978841,
      "ionization": "H+",
    },
    "mw": 608.3871833232342,
    "parts": Array [
      "HODtmpDtmpO-1H-1",
    ],
    "unsaturation": 11,
  },
  Object {
    "atoms": Object {
      "C": 20,
      "H": 24,
      "N": 10,
      "O": 10,
      "P": 2,
    },
    "charge": 0,
    "comment": "a2",
    "em": 626.11521101036,
    "ionization": Object {
      "charge": 1,
      "em": 1.00782503223,
      "mf": "H+",
    },
    "mf": "C20H24N10O10P2",
    "ms": Object {
      "charge": 1,
      "em": 627.122487462681,
      "ionization": "H+",
    },
    "mw": 626.4139013865243,
    "parts": Array [
      "HODampDampO-1H-1",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 20,
      "H": 26,
      "N": 4,
      "O": 14,
      "P": 2,
    },
    "charge": 0,
    "comment": "cmp-a2",
    "em": 608.09207552652,
    "ionization": Object {
      "charge": 1,
      "em": 22.989769282,
      "mf": "Na+",
    },
    "mf": "C20H26N4O14P2",
    "ms": Object {
      "charge": 1,
      "em": 631.081296228611,
      "ionization": "Na+",
    },
    "mw": 608.3871833232342,
    "parts": Array [
      "HODtmpDtmpO-1H-1",
    ],
    "unsaturation": 11,
  },
  Object {
    "atoms": Object {
      "C": 20,
      "H": 24,
      "N": 10,
      "O": 10,
      "P": 2,
    },
    "charge": 0,
    "comment": "a2",
    "em": 626.11521101036,
    "ionization": Object {
      "charge": 1,
      "em": 22.989769282,
      "mf": "Na+",
    },
    "mf": "C20H24N10O10P2",
    "ms": Object {
      "charge": 1,
      "em": 649.104431712451,
      "ionization": "Na+",
    },
    "mw": 626.4139013865243,
    "parts": Array [
      "HODampDampO-1H-1",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 30,
      "H": 41,
      "N": 6,
      "O": 22,
      "P": 3,
    },
    "charge": 0,
    "em": 930.14867797381,
    "ionization": Object {
      "charge": 1,
      "em": 1.00782503223,
      "mf": "H+",
    },
    "mf": "C30H41N6O22P3",
    "ms": Object {
      "charge": 1,
      "em": 931.155954426131,
      "ionization": "H+",
    },
    "mw": 930.5960614172811,
    "parts": Array [
      "HODtmpDtmpDtmpH",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 30,
      "H": 41,
      "N": 6,
      "O": 22,
      "P": 3,
    },
    "charge": 0,
    "em": 930.14867797381,
    "ionization": Object {
      "charge": 1,
      "em": 22.989769282,
      "mf": "Na+",
    },
    "mf": "C30H41N6O22P3",
    "ms": Object {
      "charge": 1,
      "em": 953.1378986759009,
      "ionization": "Na+",
    },
    "mw": 930.5960614172811,
    "parts": Array [
      "HODtmpDtmpDtmpH",
    ],
    "unsaturation": 15,
  },
  Object {
    "atoms": Object {
      "C": 30,
      "H": 38,
      "N": 15,
      "O": 16,
      "P": 3,
    },
    "charge": 0,
    "em": 957.18338119957,
    "ionization": Object {
      "charge": 1,
      "em": 1.00782503223,
      "mf": "H+",
    },
    "mf": "C30H38N15O16P3",
    "ms": Object {
      "charge": 1,
      "em": 958.190657651891,
      "ionization": "H+",
    },
    "mw": 957.6361385122163,
    "parts": Array [
      "HODampDampDampH",
    ],
    "unsaturation": 21,
  },
  Object {
    "atoms": Object {
      "C": 30,
      "H": 38,
      "N": 15,
      "O": 16,
      "P": 3,
    },
    "charge": 0,
    "em": 957.18338119957,
    "ionization": Object {
      "charge": 1,
      "em": 22.989769282,
      "mf": "Na+",
    },
    "mf": "C30H38N15O16P3",
    "ms": Object {
      "charge": 1,
      "em": 980.172601901661,
      "ionization": "Na+",
    },
    "mw": 957.6361385122163,
    "parts": Array [
      "HODampDampDampH",
    ],
    "unsaturation": 21,
  },
]
`;
